--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/Index.cshtml
@@ -5,74 +5,41 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h2>Danh sách sách</h2>
+    <a asp-action="Create" class="btn btn-success">+ Thêm sách</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TenSach)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ISBN)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NamXuatBan)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NhaXuatBan)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NgonNgu)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SoTrang)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MoTa)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.SoLuong)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenSach)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ISBN)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NamXuatBan)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NhaXuatBan)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgonNgu)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SoTrang)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MoTa)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SoLuong)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MaSach">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MaSach">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaSach">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="table-responsive">
+    <table class="table table-striped table-hover align-middle">
+        <thead class="table-light">
+            <tr>
+                <th>Tên</th>
+                <th>ISBN</th>
+                <th>Năm</th>
+                <th>NXB</th>
+                <th>Tác giả</th>
+                <th>Số lượng</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.TenSach</td>
+                    <td>@item.ISBN</td>
+                    <td>@item.NamXuatBan</td>
+                    <td>@item.NhaXuatBan</td>
+                    <td>@(@item.TacGia?.TenTacGia)</td>
+                    <td>@item.SoLuong</td>
+                    <td class="text-end">
+                        <a asp-action="Details" asp-route-id="@item.MaSach" class="btn btn-sm btn-outline-primary">Chi tiết</a>
+                        <a asp-action="Edit" asp-route-id="@item.MaSach" class="btn btn-sm btn-outline-secondary">Sửa</a>
+                        <a asp-action="Delete" asp-route-id="@item.MaSach" class="btn btn-sm btn-outline-danger">Xóa</a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</div>
