update primary key with Id

--- a/DoAn_Nhom3/LibraryManagement/Views/CuonSachs/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/CuonSachs/Edit.cshtml
@@ -15,9 +15,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MaCuon" />
             <div class="form-group">
-                <label asp-for="MaSach" class="control-label"></label>
-                <select asp-for="MaSach" class="form-control" asp-items="ViewBag.MaSach"></select>
-                <span asp-validation-for="MaSach" class="text-danger"></span>
+                <label asp-for="SachId" class="control-label"></label>
+                <select asp-for="SachId" class="form-control" asp-items="ViewBag.SachId"></select>
+                <span asp-validation-for="SachId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="TinhTrang" class="control-label"></label>
