--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Create.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Create.cshtml
@@ -19,8 +19,8 @@
                 <span asp-validation-for="MaPhat" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaPhieuMuon" class="control-label"></label>
-                <select asp-for="MaPhieuMuon" class ="form-control" asp-items="ViewBag.MaPhieuMuon"></select>
+                <label asp-for="PhieuMuonId" class="control-label"></label>
+                <select asp-for="PhieuMuonId" class ="form-control" asp-items="ViewBag.PhieuMuonId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="SoTienPhat" class="control-label"></label>
