--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/Edit.cshtml
@@ -50,9 +50,9 @@
                 <span asp-validation-for="MoTa" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaTacGia" class="control-label"></label>
-                <select asp-for="MaTacGia" class="form-control" asp-items="ViewBag.MaTacGia"></select>
-                <span asp-validation-for="MaTacGia" class="text-danger"></span>
+                <label asp-for="TacGiaId" class="control-label"></label>
+                <select asp-for="TacGiaId" class="form-control" asp-items="ViewBag.TacGiaId"></select>
+                <span asp-validation-for="TacGiaId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SoLuong" class="control-label"></label>
