--- a/DoAn_Nhom3/LibraryManagement/Views/Sachs/_Form.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Sachs/_Form.cshtml
@@ -46,11 +46,11 @@
     </div>
 
     <div class="col-md-6">
-        <label asp-for="MaTacGia" class="form-label"></label>
-        <select asp-for="MaTacGia" asp-items="ViewBag.MaTacGia" class="form-select">
+        <label asp-for="TacGiaId" class="form-label"></label>
+        <select asp-for="TacGiaId" asp-items="ViewBag.MaTacGia" class="form-select">
             <option value="">-- Chọn tác giả --</option>
         </select>
-        <span asp-validation-for="MaTacGia" class="text-danger"></span>
+        <span asp-validation-for="TacGiaId" class="text-danger"></span>
     </div>
 
     <div class="col-12">
