--- a/DoAn_Nhom3/LibraryManagement/Views/CuonSachs/Create.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/CuonSachs/Create.cshtml
@@ -19,8 +19,8 @@
                 <span asp-validation-for="MaCuon" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaSach" class="control-label"></label>
-                <select asp-for="MaSach" class ="form-control" asp-items="ViewBag.MaSach"></select>
+                <label asp-for="SachId" class="control-label"></label>
+                <select asp-for="SachId" class ="form-control" asp-items="ViewBag.SachId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="TinhTrang" class="control-label"></label>
