--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Create.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Create.cshtml
@@ -19,12 +19,12 @@
                 <span asp-validation-for="MaPhieuMuon" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaNguoiMuon" class="control-label"></label>
-                <select asp-for="MaNguoiMuon" class ="form-control" asp-items="ViewBag.MaNguoiMuon"></select>
+                <label asp-for="NguoiMuonId" class="control-label"></label>
+                <select asp-for="NguoiMuonId" class ="form-control" asp-items="ViewBag.NguoiMuonId"></select>
             </div>
             <div class="form-group">
-                <label asp-for="MaNhanVien" class="control-label"></label>
-                <select asp-for="MaNhanVien" class ="form-control" asp-items="ViewBag.MaNhanVien"></select>
+                <label asp-for="NhanVienId" class="control-label"></label>
+                <select asp-for="NhanVienId" class ="form-control" asp-items="ViewBag.NhanVienId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="NgayMuon" class="control-label"></label>
