--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuMuons/Edit.cshtml
@@ -15,14 +15,14 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MaPhieuMuon" />
             <div class="form-group">
-                <label asp-for="MaNguoiMuon" class="control-label"></label>
-                <select asp-for="MaNguoiMuon" class="form-control" asp-items="ViewBag.MaNguoiMuon"></select>
-                <span asp-validation-for="MaNguoiMuon" class="text-danger"></span>
+                <label asp-for="NguoiMuonId" class="control-label"></label>
+                <select asp-for="NguoiMuonId" class="form-control" asp-items="ViewBag.NguoiMuonId"></select>
+                <span asp-validation-for="NguoiMuonId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaNhanVien" class="control-label"></label>
-                <select asp-for="MaNhanVien" class="form-control" asp-items="ViewBag.MaNhanVien"></select>
-                <span asp-validation-for="MaNhanVien" class="text-danger"></span>
+                <label asp-for="NhanVienId" class="control-label"></label>
+                <select asp-for="NhanVienId" class="form-control" asp-items="ViewBag.NhanVienId"></select>
+                <span asp-validation-for="NhanVienId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NgayMuon" class="control-label"></label>
