--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Edit.cshtml
@@ -15,9 +15,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="MaPhat" />
             <div class="form-group">
-                <label asp-for="MaPhieuMuon" class="control-label"></label>
-                <select asp-for="MaPhieuMuon" class="form-control" asp-items="ViewBag.MaPhieuMuon"></select>
-                <span asp-validation-for="MaPhieuMuon" class="text-danger"></span>
+                <label asp-for="PhieuMuonId" class="control-label"></label>
+                <select asp-for="PhieuMuonId" class="form-control" asp-items="ViewBag.PhieuMuonId"></select>
+                <span asp-validation-for="PhieuMuonId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="SoTienPhat" class="control-label"></label>
