--- a/DoAn_Nhom3/LibraryManagement/Views/TacGias/Create.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/TacGias/Create.cshtml
@@ -5,48 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Tạo tác giả</h1>
 
-<h4>TacGia</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="MaTacGia" class="control-label"></label>
-                <input asp-for="MaTacGia" class="form-control" />
-                <span asp-validation-for="MaTacGia" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="TenTacGia" class="control-label"></label>
-                <input asp-for="TenTacGia" class="form-control" />
-                <span asp-validation-for="TenTacGia" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="NgaySinh" class="control-label"></label>
-                <input asp-for="NgaySinh" class="form-control" />
-                <span asp-validation-for="NgaySinh" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="QuocTich" class="control-label"></label>
-                <input asp-for="QuocTich" class="form-control" />
-                <span asp-validation-for="QuocTich" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="MoTa" class="control-label"></label>
-                <input asp-for="MoTa" class="form-control" />
-                <span asp-validation-for="MoTa" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+<div class="card">
+    <div class="card-body">
+        <form asp-action="Create" class="needs-validation" novalidate>
+            @await Html.PartialAsync("_Form", Model)
+            <div class="mt-3">
+                <button type="submit" class="btn btn-primary">Tạo</button>
+                <a asp-action="Index" class="btn btn-secondary ms-2">Hủy</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
