--- a/DoAn_Nhom3/LibraryManagement/Views/TacGias/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/TacGias/Index.cshtml
@@ -5,50 +5,39 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h2>Danh sách tác giả</h2>
+    <a asp-action="Create" class="btn btn-success">+ Thêm tác giả</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+<div class="table-responsive">
+    <table class="table table-striped table-hover align-middle">
+        <thead class="table-light">
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.TenTacGia)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NgaySinh)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.QuocTich)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MoTa)
-            </th>
-            <th></th>
+            <th>Mã</th>
+            <th>Tên tác giả</th>
+            <th>Ngày sinh</th>
+            <th>Quốc tịch</th>
+            <th>Mô tả</th>
+            <th class="text-end">Thao tác</th>
         </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenTacGia)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgaySinh)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.QuocTich)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MoTa)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MaTacGia">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MaTacGia">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaTacGia">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.MaTacGia</td>
+                <td>@item.TenTacGia</td>
+                <td>@(item.NgaySinh.HasValue? item.NgaySinh.Value.ToString("dd/MM/yyyy") : "")</td>
+                <td>@item.QuocTich</td>
+                <td>@item.MoTa</td>
+                <td class="text-end">
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary">Chi tiết</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary ms-1">Sửa</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger ms-1">Xóa</a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
