update sachcontroller view

--- a/DoAn_Nhom3/LibraryManagement/Views/Home/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Home/Index.cshtml
@@ -2,28 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-
-<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">Dashboard</h1>
-    <div class="btn-toolbar mb-2 mb-md-0">
-        <div class="btn-group me-2">
-            <button type="button" class="btn btn-sm btn-outline-secondary">
-                Share
-            </button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">
-                Export
-            </button>
-        </div>
-        <button type="button"
-                class="btn btn-sm btn-outline-secondary dropdown-toggle d-flex align-items-center gap-1">
-            <svg class="bi" aria-hidden="true">
-                <use xlink:href="#calendar3"></use>
-            </svg>
-            This week
-        </button>
+<div class="px-4 py-5 my-5 text-center">
+    <h1 class="display-5 fw-bold text-body-emphasis">Quản lý thông tin - Nhóm 3</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">
+            Chào mừng bạn đến với hệ thống quản lý thư viện của chúng tôi. Ứng dụng này được phát triển nhằm giúp việc quản lý sách, tác giả và độc giả trở nên dễ dàng và hiệu quả hơn.
+        </p>
     </div>
 </div>
-<canvas class="my-4 w-100"
-        id="myChart"
-        width="900"
-        height="380"></canvas>
