--- a/DoAn_Nhom3/LibraryManagement/Views/Shared/_Layout.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted px-5">
         © @DateTime.Now.Year - Nhóm 3
     </footer>
 
