--- a/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
@@ -16,9 +16,7 @@
         <div class="offcanvas-body d-md-flex flex-column p-0 pt-lg-3 overflow-y-auto">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2 active"
-                       aria-current="page"
-                       href="#">
+                    <a class="nav-link d-flex align-items-center gap-2 active" aria-current="page" asp-controller="Home" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#house-fill"></use>
                         </svg>
@@ -27,7 +25,7 @@
                 </li>
             </ul>
             <hr class="my-2" />
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-2 mb-1 text-body-secondary text-uppercase">
                 <span>Quản lý sách</span>
             </h6>
             <ul class="nav flex-column">
@@ -64,7 +62,7 @@
                     </a>
                 </li>
             </ul>
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-2 mb-1 text-body-secondary text-uppercase">
                 <span>Quản lý con người</span>
             </h6>
             <ul class="nav flex-column">
@@ -85,7 +83,7 @@
                     </a>
                 </li>
             </ul>
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-2 mb-1 text-body-secondary text-uppercase">
                 <span>Mượn – Trả</span>
             </h6>
             <ul class="nav flex-column">
@@ -106,7 +104,7 @@
                     </a>
                 </li>
             </ul>
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-2 mb-1 text-body-secondary text-uppercase">
                 <span>Phạt</span>
             </h6>
             <ul class="nav flex-column">
@@ -127,7 +125,7 @@
                     </a>
                 </li>
             </ul>
-            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase">
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-2 mb-1 text-body-secondary text-uppercase">
                 <span>Báo cáo</span>
             </h6>
             <ul class="nav flex-column">
