--- a/DoAn_Nhom3/LibraryManagement/Views/CuonSachs/Delete.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/CuonSachs/Delete.cshtml
@@ -5,42 +5,30 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Xóa cuốn sách</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>CuonSach</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TinhTrang)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TinhTrang)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TrangThai)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TrangThai)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ViTriKe)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ViTriKe)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NgayNhap)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NgayNhap)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="MaCuon" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="card">
+    <div class="card-body">
+        <h5>Bạn có chắc muốn xóa cuốn sách này?</h5>
+
+        <dl class="row">
+            <dt class="col-sm-3">Mã cuốn</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.MaCuon)</dd>
+
+            <dt class="col-sm-3">Sách</dt>
+            <dd class="col-sm-9">@Model?.Sach?.TenSach</dd>
+
+            <dt class="col-sm-3">Tình trạng</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.TinhTrang)</dd>
+
+            <dt class="col-sm-3">Trạng thái</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.TrangThai)</dd>
+        </dl>
+
+        <form asp-action="Delete" method="post">
+            <input type="hidden" asp-for="Id" />
+            <button type="submit" class="btn btn-danger">Xóa</button>
+            <a asp-action="Index" class="btn btn-outline-secondary ms-2">Hủy</a>
+        </form>
+    </div>
 </div>
