--- a/DoAn_Nhom3/LibraryManagement/Views/CuonSachs/Details.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/CuonSachs/Details.cshtml
@@ -5,39 +5,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
-
-<div>
-    <h4>CuonSach</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TinhTrang)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TinhTrang)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TrangThai)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TrangThai)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ViTriKe)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ViTriKe)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NgayNhap)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NgayNhap)
-        </dd>
-    </dl>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h1>Chi tiết cuốn sách</h1>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-sm btn-outline-secondary">Sửa</a>
+        <a asp-action="Index" class="btn btn-sm btn-secondary ms-2">Quay lại</a>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.MaCuon">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+<div class="card">
+    <div class="card-body">
+        <dl class="row">
+            <dt class="col-sm-3">Mã cuốn</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(m => m.MaCuon)</dd>
+
+            <dt class="col-sm-3">Sách</dt>
+            <dd class="col-sm-9">@Model?.Sach?.TenSach</dd>
+
+            <dt class="col-sm-3">Tình trạng</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(m => m.TinhTrang)</dd>
+
+            <dt class="col-sm-3">Trạng thái</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(m => m.TrangThai)</dd>
+
+            <dt class="col-sm-3">Vị trí kệ</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(m => m.ViTriKe)</dd>
+
+            <dt class="col-sm-3">Ngày nhập</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(m => m.NgayNhap)</dd>
+        </dl>
+    </div>
 </div>
