--- a/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Edit.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/NhanViens/Edit.cshtml
@@ -5,7 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Sửa nhân viên</h1>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h1>Sửa nhân viên</h1>
+    <a asp-action="Index" class="btn btn-secondary">Quay lại</a>
+</div>
 
 <div class="card">
     <div class="card-body">
