--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Delete.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Delete.cshtml
@@ -5,36 +5,31 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<h1>Xóa</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PhieuPhat</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SoTienPhat)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SoTienPhat)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LyDo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LyDo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TrangThaiThanhToan)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TrangThaiThanhToan)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="MaPhat" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="card mb-3">
+    <div class="card-body">
+        <h5 class="card-title">Xóa phiếu phạt: @Model.MaPhat</h5>
+        <p class="text-body-secondary">Bạn có chắc chắn muốn xóa phiếu phạt này?</p>
+
+        <dl class="row">
+            <dt class="col-sm-3">Phiếu mượn</dt>
+            <dd class="col-sm-9">@Model.PhieuMuon?.MaPhieuMuon - @Model.PhieuMuon?.NguoiMuon?.HoTen</dd>
+
+            <dt class="col-sm-3">Số tiền</dt>
+            <dd class="col-sm-9">@Model.SoTienPhat.ToString("N2")</dd>
+
+            <dt class="col-sm-3">Lý do</dt>
+            <dd class="col-sm-9">@Model.LyDo</dd>
+
+            <dt class="col-sm-3">Trạng thái thanh toán</dt>
+            <dd class="col-sm-9">@Model.TrangThaiThanhToan</dd>
+        </dl>
+
+        <form asp-action="Delete" method="post" class="d-inline">
+            <input type="hidden" asp-for="Id" />
+            <button type="submit" class="btn btn-danger">Xóa</button>
+        </form>
+        <a asp-action="Index" class="btn btn-secondary ms-2">Hủy</a>
+    </div>
 </div>
