--- a/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Index.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/PhieuPhats/Index.cshtml
@@ -1,48 +1,44 @@
-﻿@model IEnumerable<LibraryManagement.Models.PhieuPhat>
+﻿@using LibraryManagement.Extensions
+@model IEnumerable<LibraryManagement.Models.PhieuPhat>
 
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<div class="d-flex justify-content-between align-items-center mb-3">
+    <h2>Danh sách phiếu phạt</h2>
+    <a asp-action="Create" class="btn btn-success">+ Tạo phiếu phạt</a>
+</div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
+<div class="table-responsive">
+    <table class="table table-striped table-hover align-middle">
+        <thead class="table-light">
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.SoTienPhat)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.LyDo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.TrangThaiThanhToan)
-            </th>
-            <th></th>
+            <th>Mã</th>
+            <th>Phiếu mượn</th>
+            <th>Người mượn</th>
+            <th>Số tiền</th>
+            <th>Trạng thái thanh toán</th>
+            <th class="text-end">Thao tác</th>
         </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.SoTienPhat)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LyDo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TrangThaiThanhToan)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.MaPhat">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MaPhat">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaPhat">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.MaPhat</td>
+                <td>@item.PhieuMuon?.MaPhieuMuon</td>
+                <td>@item.PhieuMuon?.NguoiMuon?.HoTen</td>
+                <td>@item.SoTienPhat.ToString("N2")</td>
+                <td>@item.TrangThaiThanhToan.GetDisplayName()</td>
+                <td class="text-end">
+                    <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-outline-primary">Chi tiết</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary ms-1">Sửa</a>
+                    <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-danger ms-1">Xóa</a>
+                </td>
+            </tr>
+        }
+        </tbody>
+    </table>
+</div>
