create SachQuaHans_view and SachQuaHans_controller

--- a/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
@@ -109,7 +109,7 @@
             </h6>
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" href="#">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="SachQuaHans" asp-action="Index">
                         <svg class="bi" aria-hidden="true">
                             <use xlink:href="#file-earmark"></use>
                         </svg>
