Create DTO for storeProceduce

--- a/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
+++ b/DoAn_Nhom3/LibraryManagement/Views/Shared/_Sidebar.cshtml
@@ -134,6 +134,20 @@
                 </li>
             </ul>
             <hr class="my-2" />
+            <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-2 mb-1 text-body-secondary text-uppercase">
+                <span>Store Proceduce</span>
+            </h6>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center gap-2" asp-controller="ThongKeSachs" asp-action="Index">
+                        <svg class="bi" aria-hidden="true">
+                            <use xlink:href="#file-earmark"></use>
+                        </svg>
+                        Thống kê sách
+                    </a>
+                </li>
+            </ul>
+            <hr class="my-2" />
             <ul class="nav flex-column mb-auto">
                 <li class="nav-item">
                     <a class="nav-link d-flex align-items-center gap-2" href="#">
